--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Beautiful Webpage</title>
+    <title>WELCOME TO APPLE🇺🇲</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -51,7 +51,7 @@
 </head>
 <body>
     <header>
-        <h1>DUDU BAAP IS TROUBLING ME HERE PLEASE COME TO UNITED STATE FAST</h1>
+        <h1>DUDU BAAP IS TROUBLING ME HERE PLEASE COME TO UNITED STATE🇺🇲 FAST</h1>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
