--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 <body>
     <header>
-        <h1>DUDU BAAP IS TROUBLING ME HERE PLEASE COME TO UNITED STATE🇺🇲 FAST</h1>
+        <h1>WELCOME TO DEVOPS WORLD</h1>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
