--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+<head>   
     <title>WELCOME TO APPLE🇺🇲</title>
     <style>
         body {
@@ -8,7 +9,8 @@
             padding: 0;
             background-color: #f0f0f0;
             color: #333;
-        }
+        
+        
 
         header {
             background-color: #4CAF50;
